# gamepad-tool

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmds.rs  lib.rs  main.rs  models.rs  websocket.rs
src-tauri/src/util/: gamepad_util.rs  input_wrapper.rs  math_util.rs  mod.rs  xinput_wrapper.rs
src/assets/: websocket.scss
src/components/: GamepadButtons.vue  GamepadStatus.vue  GamepadTabs.vue  JoystickVisualization.vue  OptimizedJoystick.vue  PollingRateDisplay.vue  SettingsPanel.vue  SvgJoystick.vue  Tooltip.vue
src/composables/: useAppManager.ts  useEventListeners.ts  useGamepadState.ts  useRenderManager.ts
src/i18n/: index.ts  messages.ts
src/utils/: dataSync.d.ts  dataSync.js  websocket.d.ts  websocket.js  websocketOptimizer.d.ts  websocketOptimizer.js
src/views/: GamepadTestPage.vue  RefactoredGamepadTestPage.vue
